fix: `since` variable in www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,7 @@
   <div id="container">
     <div id="title">
       <h1>{domain}</h1>
-      <p>A XMPP/Jabber Server Since 2018/9/2</p>
+      <p>A XMPP server since {since}</p>
     </div>
 
     <div class="section">
