feat: using acme.sh instead of letsencrypt; using cron; redirect http(80) to https(443)
Also, update to latest prosody build

--- a/www/web/index.html
+++ b/www/web/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Converse</title>
+    <script>location.protocol === 'http:' && location.replace(location.href.replace(/^http:/, 'https:'))</script>
     <link rel="shortcut icon" type="image/ico" href="css/images/favicon.ico"/>
     <link type="text/css" rel="stylesheet" media="screen" href="css/converse.min.css" />
     <script src="js/libsignal-protocol.min.js"></script>
