fix: index.html

--- a/www/index.html
+++ b/www/index.html
@@ -55,7 +55,7 @@
         <li><strong>Port</strong>: <code>5222</code> <small>(Requires TLS Encryption)</small></li>
         <li><strong>Multi-User Chat (MUC)</strong>: <code>room.{domain}</code></li>
         <li><strong>Admin</strong>: <code>{admin_jid}</code></li>
-        <li><strong>Users</strong>: <code id="online-users"></code> online (<code id="c2s-connections"></code> conns), <code id="total-users"></code> total</li>
+        <li><strong>Users</strong>: <code id="online-users"></code> online (<code id="c2s-connections"></code> sessions), <code id="total-users"></code> total</li>
         <li>Powered by <a href="https://prosody.im">Prosody</a></li>
       </ul>
     </div>
@@ -85,9 +85,10 @@
       <p>Any XMPP clients will do, here're some suggestions:</p>
       <ul>
         <li><strong>Android</strong>: <a href="https://f-droid.org/packages/eu.siacs.conversations/">conversations</a></li>
-        <li><strong>iPhone/iPad</strong>: <a href="https://chatsecure.org/">ChatSecure</a> or <a href="https://monal.im/">Monal</a></li>
-        <li><strong>Windows</strong>: <a href="https://gajim.org/downloads.php?lang=en#windows">Gajim</a> or <a href="https://www.pidgin.im/download/windows/">Pidgin</a></li>
-        <li><strong>OSX</strong>: <a href="https://adium.im/">Adium</a>, <a href="https://psi-plus.com/wiki/en:downloads">Psi+</a> or <a href="https://monal.im/">Monal</a></li>
+        <li><strong>iPhone/iPad</strong>: <a href="https://siskin.im/">Siskin IM</a>, <a href="https://chatsecure.org/">ChatSecure</a> or <a href="https://monal.im/">Monal</a></li>
+        <li><strong>Windows</strong>: <a href="https://gajim.org/download/?lang=en#windows">Gajim</a> or <a href="https://www.pidgin.im/download/windows/">Pidgin</a></li>
+        <li><strong>macOS</strong>: <a href="https://github.com/tigase/beagle-im/releases">Beagle IM</a>, <a href="https://adium.im/">Adium</a>, <a href="https://psi-plus.com/wiki/en:downloads">Psi+</a> or <a href="https://monal.im/">Monal</a></li>
+        <li><strong>Linux</strong>: <a href="https://dino.im/">Dino</a></li>
         <li><strong>Web</strong>: <a href="https://{domain}/web/">Enter</a></li>
         <li>...more can be find <a href="https://xmpp.org/software/clients.html">here</a></li>
       </ul>
