fix: disable IBR; update s2s_blacklist; upgrade prosody

--- a/www/index.html
+++ b/www/index.html
@@ -105,7 +105,7 @@
 
     <div class="section">
       <h2>Register</h2>
-      <p>Either register within a client, or <a href="https://{domain}/register">register here</a></p>
+      <p>In-Band Registration(registration within a client) is disabled due to spamming, <a href="https://{domain}/register">register here</a></p>
     </div>
 
     <div class="section">
